--- a/src/index.html
+++ b/src/index.html
@@ -4,10 +4,69 @@
   <meta charset="utf-8">
   <title>Deporinter</title>
   <base href="/">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <meta name="viewport" content="width=device-width, initial-scale=1">  
+
+    <meta name="keywords" content="WebSite Template" />
+    <meta name="description" content="Porto - Multipurpose Website Template">
+    <meta name="author" content="okler.net">
+
+    <!-- Favicon -->
+    <link rel="shortcut icon" href="assets/img/favicon.ico" type="image/x-icon" />
+    <link rel="apple-touch-icon" href="assets/img/apple-touch-icon.png">
+
+    <!-- Mobile Metas -->
+    <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1.0, shrink-to-fit=no">
+
+    <!-- Web Fonts  -->
+    <link id="googleFonts" href="https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700,800%7CShadows+Into+Light&display=swap" rel="stylesheet" type="text/css">
+
+    <!-- Vendor CSS -->
+    <link rel="stylesheet" href="assets/vendor/bootstrap/css/bootstrap.min.css">
+    <link rel="stylesheet" href="assets/vendor/fontawesome-free/css/all.min.css">
+    <link rel="stylesheet" href="assets/vendor/animate/animate.compat.css">
+    <link rel="stylesheet" href="assets/vendor/simple-line-icons/css/simple-line-icons.min.css">
+    <link rel="stylesheet" href="assets/vendor/owl.carousel/assets/owl.carousel.min.css">
+    <link rel="stylesheet" href="assets/vendor/owl.carousel/assets/owl.theme.default.min.css">
+    <link rel="stylesheet" href="assets/vendor/magnific-popup/magnific-popup.min.css">
+
+    <!-- Theme CSS -->
+    <link rel="stylesheet" href="assets/css/theme.css">
+    <link rel="stylesheet" href="assets/css/theme-elements.css">
+    <link rel="stylesheet" href="assets/css/theme-blog.css">
+    <link rel="stylesheet" href="assets/css/theme-shop.css">
+
+    <!-- Current Page CSS -->
+    <link rel="stylesheet" href="assets/vendor/circle-flip-slideshow/css/component.css">
+
+    <!-- Skin CSS -->
+    <link id="skinCSS" rel="stylesheet" href="assets/css/skins/default.css">
+
+    <!-- Theme Custom CSS -->
+    <link rel="stylesheet" href="assets/css/custom.css">
+
+    <!-- Head Libs -->
+    <script src="assets/vendor/modernizr/modernizr.min.js"></script>
 </head>
-<body>
-  <app-root></app-root>
+<body data-plugin-page-transition>
+    <div class="body"> 
+        <app-root></app-root>
+    </div>
+
+
+    <script src="assets/vendor/plugins/js/plugins.min.js"></script>
+
+    <!-- Theme Base, Components and Settings -->
+    <script src="assets/js/theme.js"></script>
+
+    <!-- Circle Flip Slideshow Script -->
+    <script src="assets/vendor/circle-flip-slideshow/js/jquery.flipshow.min.js"></script>
+    <!-- Current Page Views -->
+    <script src="assets/js/views/view.home.js"></script>
+
+    <!-- Theme Custom -->
+    <script src="assets/js/custom.js"></script>
+
+    <!-- Theme Initialization Files -->
+    <script src="assets/js/theme.init.js"></script>
 </body>
 </html>
